# yolov8_onnx_rust_segmentation

./: Cargo.toml  README.md  Rocket.toml  index.html
src/: main.rs
